# vscode-dsd

./: CHANGELOG.md  LICENSE  README.md  language-configuration.json  noxfile.py  package-lock.json  package.json  questions.md  requirements.txt
bundled/tool/: lsp_server.py
language_server/: pyproject.toml
language_server/dsd_language_server/: __main__.py  server.py
src/: extension.ts
src/common/: server.ts  settings.ts
src/test/python_tests/: requirements.txt
syntaxes/: dsd.tmLanguage.json
